# comic-screenshot

./: .gitignore  comic-screenshot.py  pyproject.toml  rename.py
