[tool.poetry]
name = "comic-screenshot"
version = "0.1.0"
description = "Taking screenshots of ebook and saving as PNG or ZIP files."
authors = ["nozzle <nozzlex3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.52"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
